feat: generated SDK for API v0.2.2
Generated using default openapi-generator settings.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "boavizta_api_sdk"
-version = "0.2.0-alpha.2"
+version = "0.2.2-alpha.openapi-generator"
 description = "A Rust client/sdk to access Boavizta API"
 homepage = "https://boavizta.org"
 repository = "https://github.com/Boavizta/boaviztapi-sdk-rust/"
@@ -20,4 +20,3 @@ version = "^0.11"
 default-features = false 
 features = ["json", "multipart", "rustls-tls"]
 
-[dev-dependencies]
