fix: update crate version to  0.2.2-alpha2.openapi-generator

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "boavizta_api_sdk"
-version = "0.2.2-alpha.openapi-generator"
+version = "0.2.2-alpha2.openapi-generator"
 description = "A Rust client/sdk to access Boavizta API"
 homepage = "https://boavizta.org"
 repository = "https://github.com/Boavizta/boaviztapi-sdk-rust/"
